--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
             formData.append('file', file);
 
             try {
-                const response = await fetch('http://localhost:5000/upload', {
+                const response = await fetch('https://processing-excel.vercel.app', {
                     method: 'POST',
                     body: formData
                 });
