--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             formData.append('file', file);
 
             try {
-                const response = await fetch('https://processing-excel.vercel.app/upload', {
+                const response = await fetch('https://processing-excel.onrender.com/upload', {
                     method: 'POST',
                     body: formData
                 });
